--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
 
   <link rel="stylesheet" href="./vendor/range-slider.min.css">
 
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -67,6 +70,120 @@
   </header>
 
   <div id="pages">
+
+    <section id="main-site">
+      <div class="main-wrapper container">
+        <div class="main-site-nav">
+          <div class="nav-box"><a href="#order">
+              <h2>ORDER ONLINE</h2>
+              <p>Delicious food delivered to your door</p>
+            </a></div>
+          <div class="nav-box"><a href="#booking">
+              <h2>BOOK A TABLE</h2>
+              <p>Visit our place and enjoy your dinner</p>
+            </a></div>
+        </div>
+        <div class="openingHours">
+          <h2>OPENING HOURS:</h2>
+          <p>TUE-SUN, 12PM - 11PM</p>
+        </div>
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div><img class="d-block w-50" src="images/pizza-3.jpg" alt="pizza"></div>
+              <div class="carousel-caption d-none d-md-block w-50">
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus consequat cursus fermentum.</p>
+                <p class="author">Julian Tur</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div><img class="d-block w-50" src="images/pizza-3.jpg" alt="pizza"></div>
+              <div class="carousel-caption d-none d-md-block w-50">
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus consequat cursus fermentum.</p>
+                <p class="author">Stefan Par</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div><img class="d-block w-50" src="images/pizza-3.jpg" alt="pizza"></div>
+              <div class="carousel-caption d-none d-md-block w-50">
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus consequat cursus fermentum.</p>
+                <p class="author">Zimowit Bre</p>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+      <div id="gallery">
+        <div class="gallery-wrapper container">
+          <div class="gallery-row">
+            <div class="gallery-image">
+              <div class="layer">
+                <a href="#"><i class="fas fa-heart"></i></a>
+                <a href="#"><i class="fas fa-share-alt"></i></a>
+              </div>
+              <img src="./images/pizza-4.jpg" alt="pizza">
+            </div>
+            <div class="gallery-image">
+              <div class="layer">
+                <a href="#"><i class="fas fa-heart"></i></a>
+                <a href="#"><i class="fas fa-share-alt"></i></a>
+              </div>
+              <img src="./images/pizza-5.jpg" alt="pizza">
+            </div>
+            <div class="gallery-image">
+              <div class="layer">
+                <a href="#"><i class="fas fa-heart"></i></a>
+                <a href="#"><i class="fas fa-share-alt"></i></a>
+              </div>
+              <img src="./images/pizza-6.jpg" alt="pizza">
+            </div>
+          </div>
+          <div class="gallery-row">
+            <div class="gallery-image">
+              <div class="layer">
+                <a href="#"><i class="fas fa-heart"></i></a>
+                <a href="#"><i class="fas fa-share-alt"></i></a>
+              </div>
+              <img src="./images/pizza-7.jpg" alt="pizza">
+            </div>
+            <div class="gallery-image">
+              <div class="layer">
+                <a href="#"><i class="fas fa-heart"></i></a>
+                <a href="#"><i class="fas fa-share-alt"></i></a>
+              </div>
+              <img src="./images/pizza-8.jpg" alt="pizza">
+            </div>
+            <div class="gallery-image">
+              <div class="layer">
+                <a href="#"><i class="fas fa-heart"></i></a>
+                <a href="#"><i class="fas fa-share-alt"></i></a>
+              </div>
+              <img src="./images/pizza-9.jpg" alt="pizza">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="wrapper-instagram container">
+        <div class="instagram"><a href="#">View more on Instagram</a></div>
+      </div>
+    </section>
+
     <section id="order">
       <div id="product-list" class="product-list container"></div>
     </section>
@@ -251,6 +368,12 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
   <script src="vendor/range-slider.min.js"></script>
   <script src="js/app.js" type="module"></script>
 </body>
