--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
         <div class="main-nav">
+          <a href="#main">Main</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
         </div>
@@ -71,7 +72,7 @@
 
   <div id="pages">
 
-    <section id="main-site">
+    <section id="main">
       <div class="main-wrapper container">
         <div class="main-site-nav">
           <div class="nav-box"><a href="#order">
