--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
             <span class="sr-only">Next</span>
           </a> -->
         </div>
-      </div>
+      <!-- </div> -->
       <div id="gallery">
         <div class="gallery-wrapper container">
           <div class="gallery-row">
@@ -179,7 +179,7 @@
             </div>
           </div>
         </div>
-      </div>
+      <!-- </div> -->
       <div class="wrapper-instagram container">
         <div class="instagram"><a href="#">View more on Instagram</a></div>
       </div>
